--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@
 #
 #    pip-compile
 #
+certifi==2024.7.4
+    # via requests
+charset-normalizer==3.3.2
+    # via requests
+idna==3.8
+    # via requests
+requests==2.32.3
+    # via -r requirements.in
+urllib3==2.2.2
+    # via requests
