--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,18 @@ certifi==2024.7.4
     # via requests
 charset-normalizer==3.3.2
     # via requests
+click==8.1.7
+    # via panflute
 idna==3.8
     # via requests
+panflute==2.3.1
+    # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via arrow
 pytz==2024.1
     # via canvasapi
+pyyaml==6.0.2
+    # via panflute
 requests==2.32.3
     # via canvasapi
 six==1.16.0
