--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ idna==3.8
     # via requests
 panflute==2.3.1
     # via -r requirements.in
+pystache==0.6.5
+    # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via arrow
 pytz==2024.1
